# AoAoAoTT

./: .codecov.yml  .travis.yml  LICENSE  Makefile  README.md  aoaoaott.hpp  license.md  loophole.hpp  magic.hpp  readme.md  test.cpp  type_list.hpp
.github/workflows/: c-cpp.yml
benchmark/: CMakeLists.txt  main.cpp
test/: Makefile  asan.supp  test.cpp
